src/test/deca/context/valid/SansObjet/DeclVar-EQ-boolean-int-float.deca
// Description:
//    Declaration of a boolean variable using == operation between a int variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    float y = 2.5; 
    boolean z = 5 == 2.5; 
}
