src/test/deca/context/invalid/SansObjet/DeclVar-LE-string-int-boolean.deca
// Description:
//    Declaration of a string variable using <= operation between a int variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  2; 
    boolean y = false; 
    string z = x <= y ; 
}
